protect app to force kill

--- a/JDownloader-Demo/src/main/AndroidManifest.xml
+++ b/JDownloader-Demo/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
             </intent-filter>-->
         </activity>
 
-        <activity android:name=".ListActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".ListActivity">
+
         </activity>
 
     </application>
