--- a/JDownloader-Demo/src/main/AndroidManifest.xml
+++ b/JDownloader-Demo/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="guanpj.me.com.jdownloader_demo">
+    package="com.me.guanpj.jdownloader.demo">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
