--- a/JDownloader-Demo/src/main/AndroidManifest.xml
+++ b/JDownloader-Demo/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
         <activity android:name=".ListActivity">
         </activity>
 
+        <activity android:name=".AppListActivity"/>
+
+        <activity android:name=".AppDetailActivity"/>
+
     </application>
 
 </manifest>
