--- a/JDownloader-Demo/build.gradle
+++ b/JDownloader-Demo/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.me.guanpj.jdownloader.demo"
@@ -23,14 +23,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0'
-    compile 'com.mcxiaoke.volley:library:1.0.18'
-    compile 'com.google.code.gson:gson:2.3.1'
-    testCompile 'junit:junit:4.12'
-    compile project(':JDownloader')
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.18'
+    implementation 'com.google.code.gson:gson:2.3.1'
+    testImplementation 'junit:junit:4.12'
+    implementation project(':JDownloader')
 }
